# AI-7

./: AIDialogs.cpp  AIDialogs.h  AlertInsightsWidget.cpp  AlertInsightsWidget.h  AlertRulesDialog.cpp  AlertRulesDialog.h  AlertRulesDialog.ui  AuditLogDialog.cpp  AuditLogDialog.h  CMakeLists.txt  Ch_02_딥러닝_기초_수학.ipynb  ConnectionPool.cpp  ConnectionPool.h  CryptoUtils.cpp  CryptoUtils.h  CurrentSessionsDialog.cpp  CurrentSessionsDialog.h  CustomFilterProxyModel.cpp  CustomFilterProxyModel.h  DBBridge.cpp  DBBridge.h  LanguageManager.cpp  LanguageManager.h  LocationPopupDialog.cpp  LocationPopupDialog.h  LogTableModel.cpp  LogTableModel.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainDashboard.cpp  MainDashboard.h  MainDashboard.ui  MapDialog.cpp  MapDialog.h  MapDialog.ui  Menu.py  PatternAnalyzer.cpp  PatternAnalyzer.h  RealtimeGeoPanel.cpp  (+21 more)
Snake.Client.WinForms/: ConnectForm.cs  GlobalUsings.cs  LocalShopForm.cs  LoginForm.cs  MainForm.cs  OnlineShopForm.cs  Program.cs  RegisterForm.cs  RoomCreateForm.cs  Snake.Client.WinForms.csproj  UnifiedMainForm.cs  UnifiedShopForm.cs
Snake.Client.WinForms/Properties/PublishProfiles/: ClickOnceProfile.pubxml
Snake.Client.WinForms/Rendering/: SkinPainter.cs
Snake.Server/: GameHub.cs  Program.cs  Snake.Server.csproj  appsettings.json  snake.db
Snake.Server/Core/: Board.cs  GameCore.cs  RandomX.cs
Snake.Server/Data/: AppDbContext.cs  DbBootstrap.cs  Entities.cs  Seed.cs
Snake.Server/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
Snake.Server/Pages/Shared/: _Layout.cshtml
Snake.Server/Properties/: launchSettings.json
Snake.Server/Rooms/: GameLoopHostedService.cs  GameRoom.cs  RoomManager.cs
Snake.Server/Services/: RewardService.cs  ShopService.cs  SnapshotMapper.cs
Snake.Shared/: Cosmetics.cs  GachaDtos.cs  GameContracts.cs  OnlinePlayerBrief.cs  PlayerInfoDto.cs  PurchaseResultDto.cs  RegisterDto.cs  Snake.Shared.csproj  Themes.cs
login_db/: Makefile  account.c  account.h  chat_client  chat_server  chat_util.c  chat_util.h  client  client.c  db.c  db.h  global.c  global.h  handler.c  handler.h  member.h  password_utils.c  password_utils.h  room.c  room.h  server.c  server_log.txt
login_db/mysql-ssl/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-req.pem  server-cert.pem  server-key.pem  server-req.pem
pet_advanture/: Makefile  README.md
pet_advanture/include/: battle_manager.h  console_ui.h  final_boss.h  inventory_manager.h  map_manager.h  monster_def.h  monster_manager.h  npc_manager.h  pet_manager.h  quest_manager.h  save_load.h  shop_manager.h  skill_manager.h
pet_advanture/src/: battle_manager.c  console_ui.c  final_boss.c  inventory_manager.c  main.c  map_manager.c  monster_manager.c  npc_manager.c  pet_manager.c  quest_manager.c  save_load.c  shop_manager.c  skill_manager.c
qml/: MapView.qml  SensorDot.qml
smart_home/: CMakeLists.txt  certified.cpp  certified.h  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  safety.cpp  safety.h  search.cpp  search.h  tcpclient.cpp  tcpclient.h
